# dotenv

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  dotenv.pc.in  release.sh
include/: dotenv.h
src/: dotenv.c
src/examples/: CMakeLists.txt  env_to_kvs.c  tricky.env
tests/: CMakeLists.txt  test_dotenv.c
